# gesture-recognition-for-human-robot-interaction

./: .gitignore  README.md
Source/depth-image-socket/server/: CMakeLists.txt
Source/depth-image-socket/server/server.xcodeproj/: project.pbxproj
Source/depth-image-socket/server/src/: main.cpp
Source/human-robot-interaction/: CMakeLists.txt
Source/human-robot-interaction/human-robot-interaction.xcodeproj/: project.pbxproj
Source/human-robot-interaction/human-robot-interaction.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Source/human-robot-interaction/human-robot-interaction.xcodeproj/project.xcworkspace/xcshareddata/: human-robot-interaction.xccheckout
Source/human-robot-interaction/include/AL/alcommon/: version.h
Source/human-robot-interaction/include/AL/alproxies/: alanimatedspeechproxy.h  alaudiodeviceproxy.h  alaudioplayerproxy.h  alaudiorecorderproxy.h  alaudiosourcelocalizationproxy.h  alautomaticvolumeproxy.h  alautonomouslifeproxy.h  alautonomousmovesproxy.h  albacklightingdetectionproxy.h  albarcodereaderproxy.h  albasicawarenessproxy.h  albatteryproxy.h  albehaviormanagerproxy.h  albodytemperatureproxy.h  albonjourproxy.h  alchestbuttonproxy.h  alcolorblobdetectionproxy.h  alconnectionmanagerproxy.h  aldarknessdetectionproxy.h  aldiagnosisproxy.h  aldialogproxy.h  alengagementzonesproxy.h  alfacedetectionproxy.h  alfacetrackerproxy.h  alfastpersontrackingproxy.h  alfilemanagerproxy.h  alfindpersonheadproxy.h  alframemanagerproxy.h  alfsrproxy.h  algazeanalysisproxy.h  alinfraredproxy.h  allandmarkdetectionproxy.h  allaserproxy.h  allauncherproxy.h  alledsproxy.h  (+37 more)
Source/human-robot-interaction/lib/AL/: libalcommon.dylib  libalerror.dylib  libalproxies.dylib  libqitype.dylib  librttools.dylib
Source/human-robot-interaction/lib/NiTE2/: NiTE.ini
Source/human-robot-interaction/src/helper/: main.cpp
Source/human-robot-interaction/src/human-robot-interaction/: CMakeLists.txt  gesture_tracker.cpp  gesture_tracker.h  main.cpp  skeleton_tracker.cpp  skeleton_tracker.h  udp_client.cpp  udp_client.h  udp_server.cpp  udp_server.h  utils.h
Source/human-robot-interaction/src/nite-gesture-wave/: CMakeLists.txt  main.cpp
Source/human-robot-interaction/src/nite-hand-tracker/: main.cpp
Source/human-robot-interaction/src/nite-simple-user-read/: CMakeLists.txt  main.cpp
Source/human-robot-interaction/src/nite-user-glut-viewer/: NiteSampleUtilities.h  Viewer.cpp
Source/human-robot-interaction/src/udp-server-async/: hri.cpp
Source/human-robot-interaction/src/udp-socket-client/: main.cpp
Source/human-robot-interaction/src/udp-socket-server/: CMakeLists.txt  main.cpp
background/cmake/openni/: CMakeLists.txt  main.cpp
source/human-robot-interaction/: CMakeLists.txt  README.md
source/human-robot-interaction/-new/: 1-2.txt  3.txt  4-1-2-3-4.txt  4.txt  pipe
source/human-robot-interaction/-test/: 1-1-2-3.txt  1-1-ext.txt  1-1.txt  1-4.txt  1.txt  12.txt  2-1.txt  2-4.txt  2.txt  Ranges
source/human-robot-interaction/-train/: 0.txt  1-1-2-3-4-5.txt  1-1-2-3-4.txt  1-1-2-3.txt  1-1.txt  1-2.txt  1-3.txt  1-4.txt  1-5.txt  1-6.txt  1-7.txt  1.txt  12-3.txt  12-4.txt  2-1-2-3-4.txt  2-1-2-3.txt  2-1.txt  2-2.txt  2-3.txt  2-4.txt
source/human-robot-interaction/-train/old/: 1-1-2-3-4-5-6-7.txt  1-1-2-3-4-5-6.txt  1-1-2-3.txt  1-1-2.txt  1-2.txt  1-3.txt  1.txt  2-1-2-3-4-5-6.txt  2-1-2-3-4-5.txt  2-1-2-3-4.txt  2-1-2.txt  2-4.txt  2-5.txt  2-6.txt
source/human-robot-interaction/data/: ada-boost-training-data.txt  fps-nao.json  fps-pc.json  hri-1H-2G-HOME.txt  hri-2H-2G-DAI.txt  hri-2H-4G-HOME.txt  hri-Test-2H-2G-HOME-1.txt  hri-Test-2H-2G-HOME.txt  hri-Train-2H-4G-DAI-1.txt  hri-Train-2H-4G-DAI-2.txt  hri-Train-2H-4G-DAI.txt  hri-Train-2H-4G-HOME.txt  hri-both-hand-HOME.txt  hri-training-dataset.txt  test-sample.js  training-data.txt
source/human-robot-interaction/data/test/: 0.csv  2.csv  4.csv  5.csv
source/human-robot-interaction/human-robot-interaction.xcodeproj/: project.pbxproj
source/human-robot-interaction/include/: setup.h  utils.h
source/human-robot-interaction/lib/: libstdc++6_4.5.2-4_i386.deb
source/human-robot-interaction/lib/ALDEBARAN/: libqimessaging.dylib
source/human-robot-interaction/lib/LibStdC++/: libstdc++.so.6.0.16
source/human-robot-interaction/lib/NiTE2/: NiTE.ini
source/human-robot-interaction/src/al-proxy/: main.cpp
source/human-robot-interaction/src/al-tts-motion/: CMakeLists.txt  main.cpp
source/human-robot-interaction/src/boost-multicast-rx/: main.cpp
source/human-robot-interaction/src/boost-multicast-tx/: main.cpp
source/human-robot-interaction/src/brain/: brain.cpp  brain.h  main.cpp  test.cpp  test.h  udp_client.cpp  udp_client.h  websocket_server.cpp  websocket_server.h
source/human-robot-interaction/src/grt-ada-boost/: main.cpp
source/human-robot-interaction/src/grt-anbc/: main.cpp
source/human-robot-interaction/src/grt-test/: classification_data.cpp  main.cpp
source/human-robot-interaction/src/helper/: main.cpp
source/human-robot-interaction/src/human-robot-interaction/: CMakeLists.txt  gesture_tracker.cpp  gesture_tracker.h  main.cpp  setup.h  udp_client.cpp  udp_client.h  udp_server.cpp  udp_server.h
source/human-robot-interaction/src/ni-simple-sensor-read/: CMakeLists.txt
source/human-robot-interaction/src/nite-gesture-wave/: CMakeLists.txt  main.cpp
source/human-robot-interaction/src/nite-hand-tracker/: CMakeLists.txt  main.cpp  utils.h
source/human-robot-interaction/src/nite-simple-skeleton/: CMakeLists.txt  main.cpp
source/human-robot-interaction/src/nite-user-glut-viewer/: Viewer.cpp
source/human-robot-interaction/src/rapidjson-test/: main.cpp
source/human-robot-interaction/src/udp-server-async/: ni.cpp
source/human-robot-interaction/src/udp-socket-client/: main.cpp
source/human-robot-interaction/src/udp-socket-server/: CMakeLists.txt  main.cpp
source/human-robot-interaction/src/websocketpp/: main.cpp
source/human-robot-interaction/src/websocketpp-client/: CMakeLists.txt  main.cpp
source/human-robot-interaction/src/websocketpp_broadcast/: main.cpp
(+653 files in other folders)
